# statsformer

./: .env.sample  .gitignore  .gitmodules  README.md  pyproject.toml
data/csv/lung_TCGA/: metadata.csv
data/rdata/: ETP.RData
prompts/: automl_agent_prompt.txt  default_prompt.txt  default_system_prompt.txt
prompts/rag/: default_retriever.txt
prompts/task_descriptions/: ETP.json  bank_marketing.json  breast_cancer.json  credit_g.json  internet_ads.json  lung_TCGA.json  nomao.json  superconductivity.json
scripts/datasets/: build_dataset_from_csv.py  build_etp_from_rdata.py  build_lung_TCGA.py  build_openml_dataset.py
scripts/llm/: generate_prior.py
scripts/stats/: baseline_comparison.py  perfect_prior.py
scripts/tuning/: single_learner_study.py
shell_scripts/datasets/: build_ETP.sh  build_bank_marketing.sh  build_breast_cancer.sh  build_credit_g.sh  build_internet_ads.sh  build_lung_TCGA.sh  build_nomao.sh  build_superconductivity.sh
shell_scripts/llm/: config.sh  generate_scores_ETP.sh  generate_scores_bank_marketing.sh  generate_scores_breast_cancer.sh  generate_scores_credit_g.sh  generate_scores_internet_ads.sh  generate_scores_lung_TCGA.sh  generate_scores_nomao.sh  generate_scores_superconductivity.sh
shell_scripts/stats/: perfect_prior.sh  run_all_adversarial.sh  run_all_baseline_comp.sh  run_all_single_learner.sh
src/statsformer/: prior.py  utils.py
src/statsformer/adversarial/: fake_genes.py  permutation.py  prior.py
src/statsformer/baselines/: ablations.py  automl_llm.py  data_driven.py  feature_selection.py  feature_selectors.py
(+31 files in other folders)
